--- a/css/styles.css
+++ b/css/styles.css
@@ -38,5 +38,19 @@ body {
   color: grey;
 }
 .tab-content th {
-    font-weight: 400;
-  }
+  font-weight: 400;
+}
+/* LOADING */
+#loading {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
